@@ -20,6 +20,7 @@
 		<commons-validator.version>1.5.0</commons-validator.version>
 		<cxf.version>3.1.5</cxf.version>
 		<commons-fileupload.version>1.3.1</commons-fileupload.version>
+		<groovy.version>2.4.6</groovy.version>
 		<guava.version>19.0</guava.version>
 		<jackson.version>1.9.13</jackson.version>
 		<jcip-annotations.version>1.0</jcip-annotations.version>
@@ -209,6 +210,12 @@
 				<artifactId>cxf-rt-wsdl</artifactId>
 				<version>${cxf.version}</version>
 			</dependency>
+
+			<dependency>
+				<groupId>org.codehaus.groovy</groupId>
+				<artifactId>groovy-all</artifactId>
+				<version>${groovy.version}</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
@@ -390,6 +397,10 @@
 		<repository>
 			<id>jasperreports</id>
 			<url>http://jasperreports.sourceforge.net/maven2</url>
+		</repository>
+		<repository>
+			<id>jasperreports-third-party</id>
+			<url>http://jaspersoft.artifactoryonline.com/jaspersoft/third-party-ce-artifacts</url>
 		</repository>
 		<repository>
 			<id>javanet</id> <!-- for JTA -->
