@@ -34,6 +34,12 @@ FIXES
 
  * Widget CustomForm: server persistence manage errors
 
+ * HTML editor rendering problems while used as cell editor
+
+ * The print of built-in reports generates an error
+
+ * The "between" operator of the advanced filter does not includes ends
+
 
 
 
